# Cobb_Frequency

./: .gitignore  .gitmodules  Cobb_Frequency.opam  README.md  bin_edited  depth.txt  dune-project  meta-config.json  test.ml
_build/: .copy-db  .db  .digest-db  log
_build/default/: Cobb_Frequency.dune-package  Cobb_Frequency.install
_build/default/.dune/: configurator  configurator.v2
_build/default/Cobb/: Cobb.dune-package  (+2 more)
lib/: dune
results/: failed_table_greedy_enumerate.csv  failed_table_ratios.csv  failed_table_ratios_smaller.csv  failed_table_ratios_w2.csv  weights.csv
results/Dragen/: constructors_10._-1._-1._30._5000_10.csv  constructors_30._10._10._-1._10000_20.csv  constructors_30._10._10._-1._20000_20.csv  constructors_30._10._10._-1._5000_10.csv
results/LoadedDice/: black_0.2_20000_20.csv  black_0.333_20000_20.csv  black_0.4_20000_20.csv  black_0.6_20000_20.csv  uni_height_20000_100.csv  uni_height_5._20000_20.csv  uni_height_60000_200.csv
scripts/: find_weights.py  graph_RQ1.py  graph_RQ2.py  graph_RQ3.py  graph_talk.py  make_dumb_enumerate_tables.py  make_dumb_iterate_tables.py  make_tables.py  optimize.py  run_RQ1.py  run_RQ3.py  scatterplot.py  transformation.py
tables/: Dragen.csv  Dragen.tex  dumb_iterate_ratios.csv  dumb_iterate_ratios.tex  dumb_iterate_ratios_w.csv  dumb_iterate_ratios_w2.csv  dumb_iterate_ratios_w2.tex  dumb_iterate_weights.tex  frequency.tex  greedy_enumerate.csv  greedy_enumerate.tex  parametrized.csv  parametrized.tex  parametrized_enumeration.csv  parametrized_enumeration.tex  pe_sized_list_10.csv
test/: dune
(+3533 files in other folders)
