(lang dune 3.17)

(name Cobb_Frequency)

(generate_opam_files true)

(source
 (github EnguinandP/Cobb_Frequency))

(authors "Francille Zhuang")

(maintainers "Francille Zhuang")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name Cobb_Frequency)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))



; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
